Refactor HTML for Roblox Username Scanner

--- a/index.html
+++ b/index.html
@@ -2,32 +2,61 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Roblox Username Generator + Checker</title>
+<title>Roblox Username Scanner</title>
 <style>
-body { background:#0b0b0b; color:white; font-family:Arial; padding:20px; }
+body {
+  background:#0b0b0b;
+  color:white;
+  font-family:Arial;
+  padding:15px;
+}
 h1 { color:#00ff88; }
-input, button { padding:8px; margin:5px; background:#111; color:white; border:1px solid #333; }
-button:hover { cursor:pointer; background:#1a1a1a; }
-.box { border:1px solid #333; padding:10px; margin-top:15px; min-height:120px; white-space:pre-wrap; }
-.available span { display:inline-block; margin:4px; padding:4px 8px; background:#00ff8830; border:1px solid #00ff88; cursor:pointer; }
+input, button {
+  padding:8px;
+  margin:4px;
+  background:#111;
+  color:white;
+  border:1px solid #333;
+}
+button { cursor:pointer; }
+.box {
+  border:1px solid #333;
+  padding:10px;
+  margin-top:10px;
+  min-height:120px;
+  white-space:pre-wrap;
+}
+.available span {
+  display:inline-block;
+  margin:4px;
+  padding:4px 8px;
+  background:#00ff8840;
+  border:1px solid #00ff88;
+  cursor:pointer;
+}
+.taken { color:#ff5555; }
+.free { color:#00ff88; }
 </style>
 </head>
 <body>
 
-<h1>Roblox Username Generator + Checker</h1>
+<h1>Roblox Username Scanner</h1>
 
-Length: <input id="length" type="number" value="6" min="3" max="20">
-Amount: <input id="amount" type="number" value="10" min="1" max="100">
-<button onclick="generate()">Generate + Check</button>
+Length:
+<input id="length" type="number" value="6" min="3" max="20">
 
-<h3>Generated Names</h3>
-<div id="generated" class="box"></div>
+<button onclick="startScan()">Start Scanning</button>
+<button onclick="stopScan()">Stop</button>
 
-<h3>Available Names (Click to Copy)</h3>
+<h3>Scan Log</h3>
+<div id="log" class="box"></div>
+
+<h3>Available Usernames (Tap to Copy)</h3>
 <div id="available" class="box available"></div>
 
 <script>
 const CHARS = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
+let scanning = false;
 
 function randomName(len){
   let name = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"[Math.floor(Math.random()*26)];
@@ -38,41 +67,53 @@ function randomName(len){
 }
 
 async function checkUsername(name){
-  try {
-    const res = await fetch("https://users.roblox.com/v1/usernames/validate", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ username: name })
-    });
-    const data = await res.json();
-    return data.isValid && data.isTaken === false;
-  } catch(e) {
-    console.error("Check failed for:", name, e);
-    return false;
+  const res = await fetch("https://users.roblox.com/v1/usernames/validate", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ username: name })
+  });
+  return res.json();
+}
+
+async function startScan(){
+  if(scanning) return;
+  scanning = true;
+
+  const len = Number(document.getElementById("length").value);
+  const log = document.getElementById("log");
+  const avail = document.getElementById("available");
+
+  while(scanning){
+    const name = randomName(len);
+
+    try {
+      const data = await checkUsername(name);
+
+      if(data.isValid && data.isTaken === false){
+        log.innerHTML += `<span class="free">AVAILABLE</span> → ${name}\n`;
+
+        const span = document.createElement("span");
+        span.textContent = name;
+        span.onclick = () => navigator.clipboard.writeText(name);
+        avail.appendChild(span);
+
+        // stop after finding one (like snipers)
+        scanning = false;
+        break;
+      } else {
+        log.innerHTML += `<span class="taken">TAKEN</span> → ${name}\n`;
+      }
+    } catch(e){
+      log.innerHTML += "Error, retrying...\n";
+    }
+
+    // rate limit (VERY IMPORTANT)
+    await new Promise(r => setTimeout(r, 800));
   }
 }
 
-async function generate(){
-  const len = Number(document.getElementById("length").value);
-  const amt = Number(document.getElementById("amount").value);
-  const genBox = document.getElementById("generated");
-  const availBox = document.getElementById("available");
-
-  genBox.textContent = "";
-  availBox.innerHTML = "";
-
-  for(let i=0;i<amt;i++){
-    const name = randomName(len);
-    genBox.textContent += name + "\n";
-
-    const available = await checkUsername(name);
-    if(available){
-      const span = document.createElement("span");
-      span.textContent = name;
-      span.onclick = () => navigator.clipboard.writeText(name);
-      availBox.appendChild(span);
-    }
-  }
+function stopScan(){
+  scanning = false;
 }
 </script>
 
