--- a/index.html
+++ b/index.html
@@ -6,40 +6,73 @@
 <title>Roblox Name Scanner</title>
 
 <style>
-body {
+html,body {
   margin:0;
-  background:#0b0b0b;
+  padding:0;
+  background:black;
   color:white;
   font-family:system-ui, Arial;
+  overflow:hidden;
 }
-.container {
+
+/* Matrix canvas */
+#matrix {
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:0;
+}
+
+/* UI */
+.ui {
+  position:relative;
+  z-index:1;
   padding:12px;
 }
-h1 { color:#00ff88; font-size:20px; }
+
+h1 {
+  color:#00ff88;
+  font-size:20px;
+}
+
 .controls {
   display:flex;
   flex-wrap:wrap;
   gap:6px;
 }
+
 input, button {
   flex:1;
   padding:10px;
-  background:#111;
+  background:#111c;
   color:white;
   border:1px solid #333;
   border-radius:6px;
 }
-button { cursor:pointer; }
+
+button {
+  cursor:pointer;
+}
+
+label {
+  font-size:12px;
+  opacity:0.8;
+}
+
 .box {
-  margin-top:10px;
+  margin-top:8px;
   padding:10px;
   border:1px solid #333;
   border-radius:6px;
-  min-height:120px;
+  background:#000c;
+  min-height:110px;
   font-size:13px;
   white-space:pre-wrap;
   overflow:auto;
 }
+
 .available span {
   display:inline-block;
   margin:4px;
@@ -48,53 +81,84 @@ button { cursor:pointer; }
   background:#00ff8840;
   border:1px solid #00ff88;
 }
-.taken { color:#ff5555; }
+
 .free { color:#00ff88; }
+.taken { color:#ff5555; }
+
 .stats {
-  margin-top:8px;
   font-size:12px;
   opacity:0.8;
+  margin-top:4px;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-<h1>Roblox Username Scanner</h1>
+<canvas id="matrix"></canvas>
 
-<div class="controls">
-  <input id="minLen" type="number" min="3" max="20" value="5" placeholder="Min">
-  <input id="maxLen" type="number" min="3" max="20" value="7" placeholder="Max">
-  <button onclick="start()">Start</button>
-  <button onclick="stop()">Stop</button>
-</div>
+<div class="ui">
+  <h1>Roblox Username Scanner</h1>
 
-<div class="stats" id="stats">Checked: 0 | Available: 0</div>
+  <div class="controls">
+    <input id="minLen" type="number" min="3" max="20" value="5" placeholder="Min">
+    <input id="maxLen" type="number" min="3" max="20" value="7" placeholder="Max">
+    <button onclick="start()">Start</button>
+    <button onclick="stop()">Stop</button>
+  </div>
 
-<h3>Scan Log</h3>
-<div id="log" class="box"></div>
+  <label>Scan speed (ms)</label>
+  <input id="speed" type="range" min="400" max="2000" value="900">
 
-<h3>Available (Tap to Copy)</h3>
-<div id="available" class="box available"></div>
+  <div class="stats" id="stats">Checked: 0 | Available: 0</div>
 
-<button onclick="exportTxt()">Export Available (.txt)</button>
+  <div class="box" id="log"></div>
 
+  <h3>Available (Tap to Copy)</h3>
+  <div class="box available" id="available"></div>
 </div>
 
 <script>
+/* ================= MATRIX BACKGROUND ================= */
+const canvas = document.getElementById("matrix");
+const ctx = canvas.getContext("2d");
+
+function resize(){
+  canvas.width = innerWidth;
+  canvas.height = innerHeight;
+}
+resize();
+addEventListener("resize", resize);
+
+const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
+const fontSize = 14;
+let columns = Math.floor(canvas.width / fontSize);
+let drops = Array(columns).fill(1);
+
+function drawMatrix(){
+  ctx.fillStyle = "rgba(0,0,0,0.05)";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle = "#00ff88";
+  ctx.font = fontSize+"px monospace";
+
+  drops.forEach((y,i)=>{
+    const text = letters[Math.floor(Math.random()*letters.length)];
+    ctx.fillText(text, i*fontSize, y*fontSize);
+    drops[i] = y*fontSize > canvas.height && Math.random()>0.975 ? 0 : y+1;
+  });
+}
+setInterval(drawMatrix, 50);
+
+/* ================= SCANNER ================= */
 const CHARS = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
 let scanning = false;
 let checked = 0;
 let found = 0;
-let availableList = [];
 
 function randomName(len){
-  let name = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"[Math.floor(Math.random()*26)];
-  for(let i=1;i<len;i++){
-    name += CHARS[Math.floor(Math.random()*CHARS.length)];
-  }
-  return name;
+  let n = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"[Math.floor(Math.random()*26)];
+  for(let i=1;i<len;i++) n += CHARS[Math.floor(Math.random()*CHARS.length)];
+  return n;
 }
 
 async function check(name){
@@ -123,46 +187,28 @@ async function start(){
 
       if(data.isValid && data.isTaken === false){
         found++;
-        availableList.push(name);
-
         log.innerHTML += `<span class="free">AVAILABLE</span> → ${name}\n`;
 
         const s = document.createElement("span");
         s.textContent = name;
         s.onclick = ()=>navigator.clipboard.writeText(name);
         available.appendChild(s);
-
-        // webhookPlaceholder(name);
       } else {
         log.innerHTML += `<span class="taken">TAKEN</span> → ${name}\n`;
       }
 
       stats.textContent = `Checked: ${checked} | Available: ${found}`;
+      log.scrollTop = log.scrollHeight;
+
     } catch {}
 
-    await new Promise(r=>setTimeout(r,900));
+    await new Promise(r=>setTimeout(r, Number(speed.value)));
   }
 }
 
-function stop(){ scanning = false; }
-
-function exportTxt(){
-  const blob = new Blob([availableList.join("\n")], {type:"text/plain"});
-  const a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
-  a.download = "available_usernames.txt";
-  a.click();
+function stop(){
+  scanning = false;
 }
-
-/* PLACEHOLDER ONLY
-function webhookPlaceholder(name){
-  fetch("YOUR_WEBHOOK", {
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body:JSON.stringify({ content: "Available: "+name })
-  });
-}
-*/
 </script>
 
 </body>
