Refactor index.html to include API handler

--- a/index.html
+++ b/index.html
@@ -1,222 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-<title>RBX Username Scanner</title>
+export default async function handler(req, res) {
+  if (req.method !== "POST") {
+    return res.status(405).json({ error: "Method not allowed" });
+  }
 
-<style>
-:root {
-  --green:#00ff88;
-  --red:#ff4d4d;
-  --bg:#050505;
-}
+  try {
+    const { username } = req.body;
+    if (!username) return res.status(400).json({ error: "Missing username" });
 
-* { box-sizing:border-box }
+    const r = await fetch("https://users.roblox.com/v1/usernames/validate", {
+      method: "POST",
+      headers: { "Content-Type": "application/json", "User-Agent": "Mozilla/5.0" },
+      body: JSON.stringify({ username })
+    });
+    const data = await r.json();
 
-body {
-  margin:0;
-  background:black;
-  color:white;
-  font-family:-apple-system,BlinkMacSystemFont,system-ui;
-  overflow:hidden;
-}
-
-#matrix {
-  position:fixed;
-  inset:0;
-  z-index:0;
-}
-
-.app {
-  position:relative;
-  z-index:1;
-  padding:14px;
-  max-width:600px;
-  margin:auto;
-}
-
-.header {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-h1 {
-  font-size:20px;
-  color:var(--green);
-}
-
-.status {
-  font-size:12px;
-  padding:4px 8px;
-  border-radius:6px;
-  background:#222;
-}
-
-.controls {
-  display:flex;
-  gap:8px;
-  margin-top:10px;
-}
-
-button {
-  flex:1;
-  padding:14px;
-  font-size:16px;
-  border:none;
-  border-radius:10px;
-  background:#111;
-  color:white;
-}
-
-button.start { background:var(--green); color:black; }
-button.stop { background:#333; }
-
-.slider {
-  margin:10px 0;
-}
-
-.box {
-  margin-top:10px;
-  padding:10px;
-  border-radius:10px;
-  background:#000c;
-  border:1px solid #222;
-  font-size:13px;
-  max-height:130px;
-  overflow:auto;
-  white-space:pre-wrap;
-}
-
-.available span {
-  display:inline-block;
-  padding:8px 12px;
-  margin:4px;
-  border-radius:10px;
-  background:#00ff8830;
-  border:1px solid var(--green);
-}
-
-.free { color:var(--green); }
-.taken { color:var(--red); }
-
-.stats {
-  font-size:12px;
-  opacity:.85;
-  margin-top:6px;
-}
-</style>
-</head>
-
-<body>
-<canvas id="matrix"></canvas>
-
-<div class="app">
-  <div class="header">
-    <h1>RBX Scanner</h1>
-    <div id="status" class="status">Idle</div>
-  </div>
-
-  <div class="controls">
-    <button class="start" onclick="start()">Start</button>
-    <button class="stop" onclick="stop()">Stop</button>
-  </div>
-
-  <div class="slider">
-    <label>Scan speed: <b id="speedVal">100</b> ms</label>
-    <input id="speed" type="range" min="100" max="1500" value="100">
-  </div>
-
-  <div class="stats" id="stats">Checked: 0 | Available: 0</div>
-
-  <div id="log" class="box"></div>
-
-  <h3>Available (tap to copy)</h3>
-  <div id="available" class="box available"></div>
-</div>
-
-<script>
-/* MATRIX */
-const c = matrix, ctx = c.getContext("2d");
-function rs(){c.width=innerWidth;c.height=innerHeight}
-rs();addEventListener("resize",rs);
-
-const chars="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
-const fs=14, cols=()=>Math.floor(c.width/fs);
-let drops=Array(cols()).fill(1);
-
-setInterval(()=>{
-  ctx.fillStyle="rgba(0,0,0,.05)";
-  ctx.fillRect(0,0,c.width,c.height);
-  ctx.fillStyle="#00ff88";
-  ctx.font=fs+"px monospace";
-  drops.forEach((y,i)=>{
-    ctx.fillText(chars[Math.random()*chars.length|0],i*fs,y*fs);
-    drops[i]=y*fs>c.height&&Math.random()>.98?0:y+1;
-  });
-},50);
-
-/* SCANNER */
-let scanning=false, checked=0, found=0;
-const ALPHA="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
-const statusEl=document.getElementById("status");
-
-speed.oninput=()=>speedVal.textContent=speed.value;
-
-function gen(){
-  const len = 7 + Math.floor(Math.random()*4); // 7–10 chars
-  let s="ABCDEFGHIJKLMNOPQRSTUVWXYZ"[Math.random()*26|0];
-  for(let i=1;i<len;i++) s+=ALPHA[Math.random()*ALPHA.length|0];
-  return s;
-}
-
-async function check(u){
-  const r = await fetch("/api/check",{
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body:JSON.stringify({ username:u })
-  });
-  return r.json();
-}
-
-async function start(){
-  if(scanning) return;
-  scanning=true;
-  statusEl.textContent="Scanning";
-
-  while(scanning){
-    const name = gen();
-    try{
-      const d = await check(name);
-      checked++;
-
-      if(d.isValid && d.isTaken===false){
-        found++;
-        log.innerHTML+=`<span class="free">AVAILABLE</span> → ${name}\n`;
-
-        const s=document.createElement("span");
-        s.textContent=name;
-        s.onclick=()=>navigator.clipboard.writeText(name);
-        available.appendChild(s);
-      } else {
-        log.innerHTML+=`<span class="taken">TAKEN</span> → ${name}\n`;
-      }
-
-      stats.textContent=`Checked: ${checked} | Available: ${found}`;
-      log.scrollTop=log.scrollHeight;
-    }catch(e){
-      log.innerHTML+="Error\n";
-    }
-
-    await new Promise(r=>setTimeout(r,Number(speed.value)));
+    // Force proper check
+    const available = data.isValid && data.isTaken === false;
+    res.status(200).json({ username, available });
+  } catch (e) {
+    res.status(500).json({ error: "Proxy failed" });
   }
 }
-
-function stop(){
-  scanning=false;
-  statusEl.textContent="Stopped";
-}
-</script>
-</body>
-</html>
