--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 :root {
   --green:#00ff88;
   --red:#ff4d4d;
-  --bg:#050505;
 }
 
-* { box-sizing:border-box }
-
+* { box-sizing:border-box; }
 body {
   margin:0;
   background:black;
@@ -42,17 +40,8 @@ body {
   align-items:center;
 }
 
-h1 {
-  font-size:20px;
-  color:var(--green);
-}
-
-.status {
-  font-size:12px;
-  padding:4px 8px;
-  border-radius:6px;
-  background:#222;
-}
+h1 { font-size:20px; color:var(--green); }
+.status { font-size:12px; padding:4px 8px; border-radius:6px; background:#222; }
 
 .controls {
   display:flex;
@@ -73,9 +62,7 @@ button {
 button.start { background:var(--green); color:black; }
 button.stop { background:#333; }
 
-.slider {
-  margin:10px 0;
-}
+.slider { margin:10px 0; }
 
 .box {
   margin-top:10px;
@@ -101,11 +88,7 @@ button.stop { background:#333; }
 .free { color:var(--green); }
 .taken { color:var(--red); }
 
-.stats {
-  font-size:12px;
-  opacity:.85;
-  margin-top:6px;
-}
+.stats { font-size:12px; opacity:.85; margin-top:6px; }
 </style>
 </head>
 
@@ -137,47 +120,47 @@ button.stop { background:#333; }
 </div>
 
 <script>
-/* MATRIX */
+/* ===== MATRIX BACKGROUND ===== */
 const c = matrix, ctx = c.getContext("2d");
 function rs(){c.width=innerWidth;c.height=innerHeight}
-rs();addEventListener("resize",rs);
+rs(); addEventListener("resize", rs);
 
-const chars="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
+const letters="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
 const fs=14, cols=()=>Math.floor(c.width/fs);
 let drops=Array(cols()).fill(1);
 
 setInterval(()=>{
-  ctx.fillStyle="rgba(0,0,0,.05)";
+  ctx.fillStyle="rgba(0,0,0,0.05)";
   ctx.fillRect(0,0,c.width,c.height);
   ctx.fillStyle="#00ff88";
   ctx.font=fs+"px monospace";
   drops.forEach((y,i)=>{
-    ctx.fillText(chars[Math.random()*chars.length|0],i*fs,y*fs);
-    drops[i]=y*fs>c.height&&Math.random()>.98?0:y+1;
+    ctx.fillText(letters[Math.floor(Math.random()*letters.length)], i*fs, y*fs);
+    drops[i]=y*fs>c.height && Math.random()>.98?0:y+1;
   });
 },50);
 
-/* SCANNER */
+/* ===== SCANNER ===== */
 let scanning=false, checked=0, found=0;
 const ALPHA="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
 const statusEl=document.getElementById("status");
 
 speed.oninput=()=>speedVal.textContent=speed.value;
 
-function gen(){
+function genName(){
   const len = 7 + Math.floor(Math.random()*4); // 7–10 chars
-  let s="ABCDEFGHIJKLMNOPQRSTUVWXYZ"[Math.random()*26|0];
-  for(let i=1;i<len;i++) s+=ALPHA[Math.random()*ALPHA.length|0];
+  let s="ABCDEFGHIJKLMNOPQRSTUVWXYZ"[Math.floor(Math.random()*26)];
+  for(let i=1;i<len;i++) s+=ALPHA[Math.floor(Math.random()*ALPHA.length)];
   return s;
 }
 
-async function check(u){
-  const r = await fetch("/api/check",{
+async function check(username){
+  const r = await fetch("/api/check", {
     method:"POST",
     headers:{ "Content-Type":"application/json" },
-    body:JSON.stringify({ username:u })
+    body:JSON.stringify({ username })
   });
-  return r.json();
+  return r.json(); // returns { username, available }
 }
 
 async function start(){
@@ -185,21 +168,25 @@ async function start(){
   scanning=true;
   statusEl.textContent="Scanning";
 
+  const log=document.getElementById("log");
+  const available=document.getElementById("available");
+  const stats=document.getElementById("stats");
+  const speedValue=Number(speed.value);
+
   while(scanning){
-    const name = gen();
+    const name=genName();
     try{
-      const d = await check(name);
+      const d=await check(name);
       checked++;
 
-      if(d.isValid && d.isTaken===false){
+      if(d.available){
         found++;
         log.innerHTML+=`<span class="free">AVAILABLE</span> → ${name}\n`;
-
         const s=document.createElement("span");
         s.textContent=name;
         s.onclick=()=>navigator.clipboard.writeText(name);
         available.appendChild(s);
-      } else {
+      }else{
         log.innerHTML+=`<span class="taken">TAKEN</span> → ${name}\n`;
       }
 
@@ -209,7 +196,7 @@ async function start(){
       log.innerHTML+="Error\n";
     }
 
-    await new Promise(r=>setTimeout(r,Number(speed.value)));
+    await new Promise(r=>setTimeout(r,speedValue));
   }
 }
 
